cambio en seccion novedades

--- a/Desafio_metodologías_ Belen Almendros/index.html
+++ b/Desafio_metodologías_ Belen Almendros/index.html
@@ -34,19 +34,21 @@
                 Modifica el tema de Bootstrap con variables css
             </h2>
             <img src="./assets/img/logos/adl.png" alt="adl" class="novedades__principal--logo">
-            <p>Desafío Latam</p>
+            <h3>Desafío Latam</h3>
         </div>
 
         <div class="novedades__seccion">
-            <img src="./assets/img/posts/Herencia-JS.png" alt="Herencia-JS" class="novedades__seccion--imagen">
-            <p>
+            <div class="novedades__seccion--bloqueimagen">
+            <img src="./assets/img/posts/Herencia-JS.png" alt="Herencia-JS"  class="novedades__seccion--imagen">
+            </div>
+            <p class="novedades__seccion--fecha">
                 24 Noviembre, 2022
             </p>
             <h2>
                 Herencia en JavaScript
             </h2>
             <img src="./assets/img/logos/adl.png" alt="adl" class="novedades__seccion--logo">
-            <p>Desafío Latam</p>
+            <h3>Desafío Latam</h3>
         </div>
 
         <div class="novedades__seccion">
@@ -58,19 +60,19 @@
                 Etiquetas Semánticas
             </h2>
             <img src="./assets/img/logos/adl.png" alt="adl" class="novedades__seccion--logo">
-            <p>Desafío Latam</p>
+            <h3>Desafío Latam</h3>
         </div>
 
         <div class="novedades__seccion">
             <img src="./assets/img/posts/reactComponents.png" alt="Componentes React" class="novedades__seccion--imagen">
             <p>
-                24 Noviembre, 2022
+           24 Noviembre, 2022
             </p>
             <h2>
                 Componentes React
             </h2>
             <img src="./assets/img/logos/adl.png" alt="adl" class="novedades__seccion--logo">
-            <p>Desafío Latam</p>
+            <h3>Desafío Latam</h3>
         </div>
     </section>
 
@@ -85,7 +87,7 @@
                 Componentes Vue
             </h2>
             <img src="./assets/img/logos/adl.png" alt="adl">
-            <p>Desafío Latam</p>
+            <h3>Desafío Latam</h3>
         </div>
         <div class="populares__seccion">
             <img src="./assets/img/posts/api-js.png" alt="api-js">
@@ -96,7 +98,7 @@
                 Consumo de API con JavaScript
             </h2>
             <img src="./assets/img/logos/adl.png" alt="adl">
-            <p>Desafío Latam</p>
+            <h3>Desafío Latam</h3>
         </div>
         <div class="populares__seccion">
             <img src="./assets/img/posts/sass.jpg" alt="sass">
@@ -107,7 +109,7 @@
                 Css reutilizable con Sass
             </h2>
             <img src="./assets/img/logos/adl.png" alt="adl">
-            <p>Desafío Latam</p>
+            <h3>Desafío Latam</h3>
         </div>
         <div class="populares__seccion">
             <img src="./assets/img/posts/bootstrap.png" alt="bootstrap">
@@ -118,7 +120,7 @@
                 Componentes Bootstrap
             </h2>
             <img src="./assets/img/logos/adl.png" alt="adl">
-            <p>Desafío Latam</p>
+            <h3>Desafío Latam</h3>
         </div>
     </section>
 
