--- a/Desafio_metodologías_ Belen Almendros/index.html
+++ b/Desafio_metodologías_ Belen Almendros/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Blog FrontEnd</title>
     <meta name="author" content="Belén Almendros">
-    <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="stylesheet" href="./assets/css/main.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -15,7 +15,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
         rel="stylesheet">
-
+    <script src="https://kit.fontawesome.com/04d06360b8.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -33,13 +33,17 @@
 
 
         <div class="novedades__principal">
+            <a href="post.html">
             <img src="./assets/img/posts/bootstrap.png" alt="bootstrap" class="novedades__principal--imagen">
+        </a>
             <p>
                 24 Noviembre, 2022
             </p>
+            <a href="post.html">
             <h2>
                 Modifica el tema de Bootstrap con variables css
             </h2>
+        </a>
             <img src="./assets/img/logos/adl.png" alt="adl" class="novedades__principal--logo">
             <h3>Desafío Latam</h3>
         </div>
@@ -178,16 +182,31 @@
                         <h2>Vue</h2>
                     </div>
                     <div class="categorias__seccion--bootstrap">
-                        <img src="./assets/img/logos/bootstrap-logo.png" alt="bootstrap" width="100px">
+                        <img src="./assets/img/logos/bootstrap-logo.png" alt="bootstrap">
                         <h2>Bootstrap</h2>
                     </div>
-                    <p>Ver todas las categorías</p>
+                    <br>
+                    <p>Ver todas las categorías <i class="fa-solid fa-chevron-right"></i></p>
                 </section>
             </div>
         </div>
     </div>
 
-
+    <div class="suscripcion">
+        <div class="suscripcion__formulario">
+            <p>Mantente informado sobre el 
+                <br>Desarrollo Font End</p>
+          <form class="d-flex align-items-center">
+            <div class="flex-grow-1 me-2">
+              <label for="email" class="visually-hidden">Correo Electrónico</label>
+              <input type="email" class="form-control" id="email" placeholder="Ingresa tu correo electrónico">
+            </div>
+            <button type="submit" class="btn btn-custom">Suscríbete</button>
+          </form>
+        </div>
+      </div>
+    </section>
+    
     <footer>
         <div class="main__logo">
             <img src="./assets/img/logos/adl.png" alt="adl">
