boton de suscripcion y registro en index

--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
               <label for="email" class="visually-hidden">Correo Electrónico</label>
               <input type="email" class="form-control" id="email" placeholder="Ingresa tu correo electrónico">
             </div>
-            <button type="submit" class="btn btn-custom">Suscríbete</button>
+            <button type="button" class="btn btn-custom" onclick="window.location.href='register.html';">Suscríbete</button>
           </form>
         </div>
       </div>
